Closed Bug 673584 Opened 13 years ago Closed 13 years ago

Call QueueAnimatedContentForRefresh with 30 instead of 60 for the progress element

Categories

(Core :: Widget: Win32, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: mounir, Assigned: mounir)

Details

(Whiteboard: [inbound])

Attachments

(1 file)

Attached patch Trivial patchSplinter Review
      No description provided.
Attachment #547822 - Flags: review?(jmathies)
Attachment #547822 - Flags: review?(jmathies) → review+
Assignee: nobody → mounir
Status: NEW → ASSIGNED
Whiteboard: [needs review] → [inbound]
http://hg.mozilla.org/mozilla-central/rev/baab0b0dd3a8
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: