Bug 673584 - Call QueueAnimatedContentForRefresh with 30 instead of 60 for the progress element. r=jimm